test/resources/pod-image-pull-back-off.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-pull-back-off
spec:
  containers:
  - name: default
    image: docker.io/unknown:latest # invalid image name
    resources:
      limits:
        cpu: 500m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 20Mi
  serviceAccount: default
  serviceAccountName: default
status:
  conditions:
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - image: docker.io/unknown:latest
    imageID: ""
    name: default
    restartCount: 0
    ready: false
    started: false
    state:
      waiting:
        message: Back-off pulling image "docker.io/unknown:latest"
        reason: ImagePullBackOff
