test/resources/pod-image-pull-backoff.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: image-pull-backoff
spec:
  containers:
  - name: default
    image: docker.io/unknown:latest # invalid image name
  #   imagePullPolicy: Always
  # securityContext:
  #   runAsNonRoot: true
  #   seccompProfile:
  #     type: RuntimeDefault
  # serviceAccount: default
  # serviceAccountName: default
status:
  conditions:
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - image: docker.io/unknown:latest
    imageID: ""
    name: default
    restartCount: 0
    ready: false
    started: false
    state:
      waiting:
        message: Back-off pulling image "docker.io/unknown:latest"
        reason: ImagePullBackOff
