test/resources/pod-unknown-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: unknown-configmap
spec:
  containers:
  - name: default
    image: k8s.gcr.io/echoserver:1.4
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    env:
    - name: COOKIE
      valueFrom:
        configMapKeyRef:
          name: unknown-configmap # unknown
          key: cookie
  serviceAccount: default
  serviceAccountName: default
status:
  conditions:
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - image: k8s.gcr.io/echoserver:1.4
    imageID: ""
    name: default
    ready: false
    started: false
    state:
      waiting:
        message: configmap "unknown-configmap" not found
        reason: CreateContainerConfigError
