test/resources/pod-unknown-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unknown-volume
spec:
  containers:
  - name: default
    image: k8s.gcr.io/echoserver:1.4
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    volumeMounts:
    - mountPath: "/tmp"
      name: unknown-volume
    resources:
      limits:
        cpu: 500m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 20Mi
  serviceAccount: default
  serviceAccountName: default
  volumes:
  - name: unknown-volume
    hostPath:
      path: /any/path
