test/resources/replicaset-service-account-not-found.yaml
# vscode-kubernetes-tools: exclude
# (because OpenShift routes seem to be interpreted as pods ¯\_(ツ)_/¯)
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sa-notfound
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: sa-notfound
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
    routerName: default
    wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  name: sa-notfound
  labels:
    app: sa-notfound
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: sa-notfound
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
---
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: sa-notfound
  ownerReferences:
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sa-notfound
  template:
    metadata:
      labels:
        app: sa-notfound
    spec:
      containers:
      - name: default
        image: caddy:2
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 20Mi
      serviceAccount: sa-notfound # ServiceAccount does not exist (by default, only `default` exists)
      serviceAccountName: sa-notfound 
status:
  conditions:
  - message: 'pods "sa-notfound-" is forbidden: error looking up service account test/sa-notfound:
      serviceaccount "sa-notfound" not found'
    reason: FailedCreate
    status: "True"
    type: ReplicaFailure
  replicas: 0
