test/resources/route-missing-target-service.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: missing-target-service
spec:
  to:
    kind: Service
    name: missing
