test/resources/service-no-matching-pods.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: service-no-matching-pods
  labels:
    app: service-no-matching-pods
spec:
  type: NodePort
  sessionAffinity: None
  selector:
    app: invalid # will not match any pod
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
---
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: something-else-785d8bcc5f-g92mn
  labels:
    app: something-else # not matching the service selector
spec:
  containers:
  - image: k8s.gcr.io/echoserver:1.4
    imagePullPolicy: IfNotPresent
    name: default
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
  serviceAccount: default
  serviceAccountName: default
status:
  conditions:
  - status: "True"
    type: Ready
