test/resources/pod-container-config-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: container-config-error
spec:
  containers:
  - name: default
    image: k8s.gcr.io/echoserver:1.4
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
  securityContext:
    runAsNonRoot: true # but echoserver process needs to run as root
    seccompProfile:
      type: RuntimeDefault
  serviceAccount: default
  serviceAccountName: default
status:
  conditions:
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - image: k8s.gcr.io/echoserver:1.4
    imageID: ""
    name: default
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: 'container has runAsNonRoot and image will run as root (pod: "container-config-error_test(2513d2ac-91fa-4d90-b8f8-45d9c438d946)",
          container: default)'
        reason: CreateContainerConfigError
