test/resources/pod-create-container-config-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: create-container-config-error
spec:
  containers:
  - name: default
    image: k8s.gcr.io/echoserver:1.4
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    resources:
      limits:
        cpu: 500m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 20Mi
  securityContext:
    runAsNonRoot: true # but echoserver process needs to run as root
    seccompProfile:
      type: RuntimeDefault
  serviceAccount: default
  serviceAccountName: default
status:
  conditions:
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - image: k8s.gcr.io/echoserver:1.4
    imageID: ""
    name: default
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: 'back-off 5m0s restarting failed container=default pod=create-container-config-error'
        reason: CreateContainerConfigError
---
apiVersion: v1
kind: Event
metadata:
  name: create-container-config-error.1723356ebd9ae4d0
firstTimestamp: "2022-10-31T16:45:05Z"
lastTimestamp: "2022-10-31T16:51:05Z"
type: Warning
reason: BackOff
message: Back-off restarting failed container
involvedObject:
  apiVersion: v1
  kind: Pod
  name: create-container-config-error
count: 4
