test/resources/pod-readiness-probe-error.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readiness-probe-error
spec:
  containers:
  - name: default
    image: caddy:2
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    readinessProbe:
      httpGet:
        path: /healthz # endpoint does not exist
        port: http
      failureThreshold: 1
      periodSeconds: 60
    resources:
      limits:
        cpu: 500m
        memory: 100Mi
      requests:
        cpu: 100m
        memory: 20Mi
  serviceAccount: default
  serviceAccountName: default
status:
  conditions:
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - message: 'containers with unready status: [default]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - containerID: docker://7e2a1894ed2773b3a6dc614fb99661ec628c198f0371ed4a9266d79cafc6e2f2
    image: caddy:2
    imageID: docker-pullable://k8s.gcr.io/echoserver@sha256:5d99aa1120524c801bc8c1a7077e8f5ec122ba16b6dda1a5d3826057f67b9bcb
    name: default
    ready: false
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2022-10-22T17:18:02Z"
---
apiVersion: v1
kind: Event
metadata:
  name: readiness-probe-error.17202520760a2a72
firstTimestamp: "2022-10-22T17:18:03Z"
lastTimestamp: "2022-10-22T08:48:17Z"
type: Warning
reason: Unhealthy
message: 'Readiness probe failed: Get "http://172.17.0.4:80/healthz": dial tcp 172.17.0.4:80:
  connect: connection refused'
involvedObject:
  apiVersion: v1
  kind: Pod
  name: readiness-probe-error
count: 156
